--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 	</head>
 	<body>
 <!-- - - - - - - 8<- - - - - - cut here - - - - - 8<- - - - - - - -->
-		<script type="text/javascript" src="pano2vr_player.js?ts=86275888">
+		<script type="text/javascript" src="pano2vr_player.js?ts=71506534">
+		</script>
+		<script type="text/javascript" src="skin.js?ts=71506534">
 		</script>
 		<div id="container" style="width:100%;height:100%;overflow:hidden;">
 		<br>Loading...<br><br>
@@ -87,10 +89,12 @@
 			pano=new pano2vrPlayer("container");
 			pano.startNode = startNode;
 			pano.startView = startView;
-			pano.setQueryParameter("ts=86275888")
+			pano.setQueryParameter("ts=71506534")
+			// add the skin object
+			skin=new pano2vrSkin(pano);
 			// load the configuration
 			window.addEventListener("load", function() {
-				pano.readConfigUrlAsync("pano.xml?ts=86275888");
+				pano.readConfigUrlAsync("pano.xml?ts=71506534");
 			});
 			if (window.navigator.userAgent.match(/Safari/i)) {
 				// fix for white borders, rotation on iPhone
